kdebase-workspace (4:4.3.0-3) UNRELEASED; urgency=low

  +++ Changes by George Kiagiadakis:

  * Make plasma-dataengines-workspace recommend ksysguardd,
    as it is needed for the system monitor data engine.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 17 Aug 2009 14:16:48 +0300

kdebase-workspace (4:4.3.0-2) unstable; urgency=low

  +++ Changes by Modestas Vainius:

  * debian/kdm.init: oxygen-air is new default now.
  * reorder code in debian/kdm.init a bit. This should solve cases of kdm
    failing to start.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 06 Aug 2009 14:20:53 +0300

kdebase-workspace (4:4.3.0-1) unstable; urgency=low

  * New upstream release.
  * Bump libakonadi-dev build dependency to version 1.1.95.
  * Add libgps-dev build dependency.
  * Update installed files.

  +++ Changes by Martin Alfke:

  * Add sanity checks to kdm.init file for availability of 
    desktop-base files and paths. (Closes: #523109)

  +++ Changes by Ana Beatriz Guerrero Lopez:

  * Update installed files.
  * Bump build depends to >= 4.3.0.
  * Add patch 01_r1004104_oxygen_air.diff, install oxygen air and make it
    default. And update 12_be_better_at_honouring_user_kdm_theming.diff	acordingly.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 04 Aug 2009 15:41:33 +0200

kdebase-workspace (4:4.2.96-1) experimental; urgency=low

  * New upstream release candidate.
    - Plasma job progress notifications now include
      estimated time remaining information. (Closes: #532417)

  +++ Changes by George Kiagiadakis:

  * Bump build-dependency on kdelibs5-dev and kdepimlibs5-dev
    to version 4.2.95.
  * Bump build-dependency on libqedje-dev to version 0.4.0.
  * Move package plasma-scriptengine-javascript from
    kdebase-workspace to kdebase-runtime as the sources for
    this component were moved upstream.
  * Change plasma-scriptengines metapackage to depend on