@@ -7,8 +7,13 @@ Build-Depends: cdbs (>= 0.4.51), debhelper (>= 7), quilt, pkg-kde-tools (>= 0.4.
  kdelibs5-dev (>= 4:4.3.0), kdepimlibs5-dev (>= 4:4.3.0), libboost-dev,
  python-support (>= 0.6), python-dev,
  libbluetooth-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
- libck-connector-dev, libdbus-1-dev, libnm-util-dev (>= 0.7), network-manager-dev (>= 0.7.0),
- libpam0g-dev, libqimageblitz-dev (>= 1:0.0.4-2), libraw1394-dev, libsensors-dev,
+ libck-connector-dev, libdbus-1-dev,
+ libnm-util-dev (>= 0.7) [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
+ network-manager-dev (>= 0.7.0) [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
+ libpam0g-dev, libqimageblitz-dev (>= 1:0.0.4-2), 
+ libraw1394-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386], 
+ libsensors-dev [!kfreebsd-i386 !kfreebsd-amd64 !hurd-i386],
+ libdevstat-dev [kfreebsd-i386 kfreebsd-amd64],
  libstrigiqtdbusclient-dev (>= 0.6.3), libstreamanalyzer-dev (>= 0.6.3), libusb-dev, libxkbfile-dev,
  libxcomposite-dev, libxdamage-dev, libxfixes-dev, libxklavier12-dev,
  libxrandr-dev, libxrender-dev, libxxf86misc-dev, libxi-dev,
